--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+    장기영 / 어디가지또
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+    소프트웨어 개발자로 일하고 있습니다. 
+
+    무엇을 써야할지 조금씩 업데이트 할게요.
 </p>
+
